--- a/★★★★★/Base.lproj/Main.storyboard
+++ b/★★★★★/Base.lproj/Main.storyboard
@@ -133,7 +133,7 @@
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="bci-q3-Exl">
                                 <rect key="frame" x="24" y="28" width="343" height="557"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <mutableString key="text">Privacy Policy
+                                <string key="text">Privacy Policy
 This privacy policy has been compiled to better serve those who are concerned with how their 'Personally Identifiable Information' (PII) is being used online. PII, as described in US privacy law and information security, is information that can be used on its own or with other information to identify, contact, or locate a single person, or to identify an individual in context. Please read our privacy policy carefully to get a clear understanding of how we collect, use, protect or otherwise handle your Personally Identifiable Information in accordance with our website.
 
 What personal information do we collect from the people that visit our blog, website or app?
@@ -205,7 +205,7 @@ and we will promptly remove you from ALL correspondence.
 
 Contacting Us
 
-If there are any questions regarding this privacy policy, you may contact us using the information below.  https://5starsapp.com/contact/  Last Edited on 2017-06-29</mutableString>
+If there are any questions regarding this privacy policy, you may contact us using the information below.  https://5starsapp.com/contact/  Last Edited on 2017-06-29</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
@@ -927,80 +927,10 @@ If there are any questions regarding this privacy policy, you may contact us usi
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="NDx-z2-0Az">
                                 <rect key="frame" x="24" y="28" width="343" height="557"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <mutableString key="text">License_AgreementVC 
-This privacy policy has been compiled to better serve those who are concerned with how their 'Personally Identifiable Information' (PII) is being used online. PII, as described in US privacy law and information security, is information that can be used on its own or with other information to identify, contact, or locate a single person, or to identify an individual in context. Please read our privacy policy carefully to get a clear understanding of how we collect, use, protect or otherwise handle your Personally Identifiable Information in accordance with our website.
-
-What personal information do we collect from the people that visit our blog, website or app?
-
-When ordering or registering on our site, as appropriate, you may be asked to enter your name, email address, Profile picture or other details to help you with your experience.
-
-When do we collect information?
-
-We collect information from you when you register on our site or enter information on our site.
-
-
-How do we use your information?
-
-We may use the information we collect from you when you register, make a purchase, sign up for our newsletter, respond to a survey or marketing communication, surf the website, or use certain other site features in the following ways:
-
-      • To personalize your experience and to allow us to deliver the type of content and product offerings in which you are most interested.
-      • To improve our website in order to better serve you.
-
-How do we protect your information?
-
-We do not use vulnerability scanning and/or scanning to PCI standards.
-We only provide articles and information. We never ask for credit card numbers.
-We do not use Malware Scanning.
-
-We do not use an SSL certificate
-         • We do not need an SSL because:
-We dont ask for credit card information.
-
-Do we use 'cookies'?
-
-We do not use cookies for tracking purposes
-
-You can choose to have your computer warn you each time a cookie is being sent, or you can choose to turn off all cookies. You do this through your browser settings. Since browser is a little different, look at your browser's Help Menu to learn the correct way to modify your cookies.
-
-If you turn cookies off, Some of the features that make your site experience more efficient may not function properly.that make your site experience more efficient and may not function properly.
-
-
-Third-party disclosure
-
-We do not sell, trade, or otherwise transfer to outside parties your Personally Identifiable Information.
-
-Third-party links
-
-We do not include or offer third-party products or services on our website.
-
-Google
-
-Google's advertising requirements can be summed up by Google's Advertising Principles. They are put in place to provide a positive experience for users. https://support.google.com/adwordspolicy/answer/1316548?hl=en 
-
-We have not enabled Google AdSense on our site but we may do so in the future.
-
-COPPA (Children Online Privacy Protection Act)
-
-When it comes to the collection of personal information from children under the age of 13 years old, the Children's Online Privacy Protection Act (COPPA) puts parents in control. The Federal Trade Commission, United States' consumer protection agency, enforces the COPPA Rule, which spells out what operators of websites and online services must do to protect children's privacy and safety online.
-
-We do not specifically market to children under the age of 13 years old.
-Do we let third-parties, including ad networks or plug-ins collect PII from children under 13?
-
-CAN SPAM Act
-
-The CAN-SPAM Act is a law that sets the rules for commercial email, establishes requirements for commercial messages, gives recipients the right to have emails stopped from being sent to them, and spells out tough penalties for violations.
-
-We collect your email address in order to:
-
-To be in accordance with CANSPAM, we agree to the following:
-
-If at any time you would like to unsubscribe from receiving future emails, you can email us at
-and we will promptly remove you from ALL correspondence.
-
-
-Contacting Us
-
-If there are any questions regarding this privacy policy, you may contact us using the information below.  https://5starsapp.com/contact/  Last Edited on 2017-06-29</mutableString>
+                                <mutableString key="text">State of California Rev. 133C774 END USER LICENSE AGREEMENT
+  This End-User License Agreement (this “EULA”) is a legal agreement between you (“Licensee”) and Nikoloz Elashvili (“Licensor”), the author of 5-Stars, including all HTML files, XML files, Java files, graphics files, animation files, data files, technology, development tools, scripts and programs, both in object code and source code (the “Software”), the deliverables provided pursuant to this EULA, which may include associated media, printed materials, and “online” or electronic documentation. By installing, copying, or otherwise using the Software, Licensee agrees to be bound by the terms and conditions set forth in this EULA. If Licensee does not agree to the terms and conditions set forth in this EULA, then Licensee may not download, install, or use the Software. 1. Grant of LicenseA) Scope of License. Subject to the terms of this EULA, Licensor hereby grants to Licensee a royalty-free, non-exclusive license to possess and to use a copy of the Software. The Software is being distributed by:- digital downloadB) Installation and Use. Licensee may install and use an unlimited number of copies of the Software solely for Licensee's personal use. 2. Description of Rights and LimitationsA) Limitations. Licensee and third parties may not reverse engineer, decompile, or disassemble the Software, except and only to the extent that such activity is expressly permitted by applicable law notwithstanding the limitation.B) Separation of Components. The Software is licensed as a single product. Its components may not be separated for use on more than one computer. 3. Title to Software. Licensor represents and warrants that it has the legal right to enter into and perform its obligations under this EULA, and that use by the Licensee of the Software, in accordance with the terms of this EULA, will not infringe upon the intellectual property rights of any third parties. 4. Intellectual Property. All now known or hereafter known tangible and intangible rights, title, interest, copyrights and moral rights in and to the Software, including but not limited to all images, photographs, animations, video, audio, music, text, data, computer code, algorithms, and information, are owned by Licensor. The Software is protected by all applicable copyright laws and international treaties. 5. No Support. Licensor has no obligation to provide support services for the Software.   6. Duration. This EULA is perpetual or until:A) Automatically terminated or suspended if Licensee fails to comply with any of the terms and conditions set forth in this EULA; orB) Terminated or suspended by Licensor, with or without cause.
+In the event this EULA is terminated, you must cease use of the Software and destroy all copies of the Software. 7. Jurisdiction. This EULA shall be deemed to have been made in, and shall be construed pursuant to the laws of the State of California, without regard to conflicts of laws provisions thereof. Any legal action or proceeding relating to this EULA shall be brought exclusively in courts located in Los Angeles, CA, and each party consents to the jurisdiction thereof. The prevailing party in any action to enforce this EULA shall be entitled to recover costs and expenses including, without limitation, attorneys’ fees. This EULA is made within the exclusive jurisdiction of the United States, and its jurisdiction shall supersede any other jurisdiction of either party’s election. 8. Non-Transferable. This EULA is not assignable or transferable by Licensee, and any attempt to do so would be void. 9. Severability. No failure to exercise, and no delay in exercising, on the part of either party, any privilege, any power or any rights hereunder will operate as a waiver thereof, nor will any single or partial exercise of any right or power hereunder preclude further exercise of any other right hereunder. If any provision of this EULA shall be adjudged by any court of competent jurisdiction to be unenforceable or invalid, that provision shall be limited or eliminated to the minimum extent necessary so that this EULA shall otherwise remain in full force and effect and enforceable. 10.WARRANTY DISCLAIMER. LICENSOR, AND AUTHOR OF THE SOFTWARE, HEREBY EXPRESSLY DISCLAIM ANY WARRANTY FOR THE SOFTWARE. THE SOFTWARE AND ANY RELATED DOCUMENTATION IS PROVIDED “AS IS” WITHOUT WARRANTY OF ANY KIND, EITHER EXPRESS OR IMPLIED, INCLUDING, WITHOUT LIMITATION, THE IMPLIED WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE, OR NON-INFRINGEMENT. LICENSEE ACCEPTS ANY AND ALL RISK ARISING OUT OF USE OR PERFORMANCE OF THE SOFTWARE. 11. LIMITATION OF LIABILITY. LICENSOR SHALL NOT BE LIABLE TO LICENSEE, OR ANY OTHER PERSON OR ENTITY CLAIMING THROUGH LICENSEE ANY LOSS OF PROFITS, INCOME, SAVINGS, OR ANY OTHER CONSEQUENTIAL, INCIDENTAL, SPECIAL, PUNITIVE, DIRECT OR INDIRECT DAMAGE, WHETHER ARISING IN CONTRACT, TORT, WARRANTY, OR OTHERWISE. THESE LIMITATIONS SHALL APPLY REGARDLESS OF THE ESSENTIAL PURPOSE OF ANY LIMITED REMEDY. UNDER NO CIRCUMSTANCES SHALL LICENSOR’S AGGREGATE LIABILITY TO LICENSEE, OR ANY OTHER PERSON OR ENTITY CLAIMING THROUGH LICENSEE, EXCEED THE FINANCIAL AMOUNT ACTUALLY PAID BY LICENSEE TO LICENSOR FOR THE SOFTWARE. 12. Entire Agreement. This EULA constitutes the entire agreement between Licensor and Licensee and supersedes all prior understandings of Licensor and Licensee, including any prior representation, statement, condition, or warranty with respect to the subject matter of this EULA. 13. Additional Provisions and/or Disclosures. There is no tolerance for objectionable content or abusive usersEnd User License Agreement (Rev. 133C774)            
+GENERAL INSTRUCTIONS WHAT IS AN END USER LICENSE AGREEMENT?An End User License Agreement is a contract between two parties -- the licensor and the licensee -- for the right to use proprietary software. The licensor or vendor is often an individual or software company who created the software. The licensee is the user who pays a fee to use, download, or install a copy of the software.An End User License Agreement is often known by its abbreviated form EULA. An EULA protects the licensor or copyright owner of the software by prohibiting the licensee from re-selling the software for their own personal gain at your expense. A license essentially gives the user “permission” or a limited right to use the software. WHEN IS IT NEEDED?An End User License Agreement is commonly used when an individual or company gives creates proprietary software and would like to make money by allowing others to use the program in limited ways. If the licensor is worried about their copyright, an EULA prevents others from copying the source code, selling the software as their own, or transferring the software to a non-paying user.Without an End User License Agreement, a software publisher is in many ways agreeing to a free and open- source software license. In these “copyleft” situations, all future versions of the software must continue to be distributed for free. Instead, if the individual or company who created the software wants to earn money, an EULA protects their their source code and specially written program, mobile app, or website from being copied or used without permission. MOST COMMON SITUATIONS· websites mobile apps· software applications· computer programs WHAT SHOULD BE INCLUDED?To be valid, an End User License Agreement must include at least the following:· Disclaimer of Warranties: the software is often provided “as is” and the licensor is not responsible for any problems that may arise from using the software· Governing Law: which state’s laws will apply if there is a dispute or problem· Infringement Acknowledgement: the user is responsible for any legal issues related to copyright infringement· Licensor: name and address of the individual or company who created the software· Licensee: name and address of the user who wants to install or download the software· License Granting: limitations on how the software can be used by the licensee· Limitations of Liability: whether the licensor will be responsible for any damages or problems that arise from using the software· Maintenance and Support: whether the user will be provided support on site or by phone, either 24 hours 7 days per week, quarterly, or annually· Software: name or title of the computer software program created and now licensed· Termination: whether the software developer has the right to end the license if the user violates the EULA or other issues arise· Use Restrictions: the licensee is limited in how they can legally or illegally use the software OTHER NAMESAs a reference, an End User License Agreement is known by other names, which include: Browse Wrap Agreement, Click-Wrap License, EULA, End-Use License Agreement, License Agreement, Licensed Application End-User Agreement, Shrink-Wrap License, Software License Agreement. End User License Agreement (Rev. 133C774)</mutableString>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
